mesclei o que Mari fez com o que eu fiz. Adicionamos cor rosa ao main. Acertei link entre paginas e imagens.

--- a/faleconosco.html
+++ b/faleconosco.html
@@ -17,8 +17,7 @@
             <img class="imagem-logo" src="./img/4food-nome.png">
         </div>
 
-        <a class="formata-link-cor" href="./index.html">Home</a>
-        <a class="formata-link-cor" href="./categorias.html">Categorias</a>
+        <a class="formata-link-cor" href="./index.html">Categorias</a>
         <a class="formata-link-cor" href="./faleconosco.html">Fale Conosco</a>
         <a class="formata-link-cor" href="">Nosso Time</a>
 
@@ -27,31 +26,41 @@
             <label for="nome">Nome</label>
             <input type="text" name="nome" id="nome">
             <label for="senha">Senha</label>
-            <input type="text" name="nome" id="senha">
+            <input type="password" name="nome" id="senha">
             <button class="botao-login" type="submit">Login</button>
         </div>
     </header>
-    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
-    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
-    <div>
-        <form class="contato">
-            <label for="nome">Nome:</label><br>
-            <input class="formata-input" type="text" id="fname" name="nome"><br>
+    <main class="cor-fundo">
+        <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+        <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
-            <label for="email">E-mail:</label><br>
-            <input class="formata-input" type="text" id="fname" name="email"><br>
+        <div>
+            <form class="contato">
+                <label for="nome">Nome:</label><br>
+                <input class="formata-input" type="text" id="fname" name="nome"><br>
 
-            <!-- <label for="tel">Telefone:</label><br> -->
-            <!-- <input class="formata-input" type="text" id="fname" name="tel"><br> ver se precisa tudo isso! -->
+                <label for="email">E-mail:</label><br>
+                <input class="formata-input" type="email" id="fname" name="email"><br>
 
-            <label for="mensagem">Mensagem:</label><br>
-            <input class="formata-input" id="caixa-mensagem" type="text" id="fname" name="mensagem"><br>
+                <label for="mensagem">Mensagem:</label><br>
+                <input class="formata-input" id="caixa-mensagem" type="text" id="fname" name="mensagem"><br>
 
-            <input class="botao-submit" type="submit" id="fname" name="mensagem"><br>
-        </form>
-    </div>
+                <input class="botao-submit" type="submit" id="fname" name="mensagem"><br>
+            </form>
+        </div>
 
+        <div>
+            <a href="https://www.facebook.com"><img class="tamanho-logos" src="./img/facebook logo.png"></a>
+
+            <a href="https://www.instagram.com"><img class="tamanho-logos" src="./img/logo insta.png"></a>
+
+            <a href="https://www.twitter.com"><img class="tamanho-logos" src="./img/logo twitter.png"></a>
+
+            <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
+
+        </div>
+    </main>
 
 </body>
 
