arrumei os logos das redes sociais no fale conosco. Coloquei a fonte como bold

--- a/faleconosco.html
+++ b/faleconosco.html
@@ -50,14 +50,16 @@
             </form>
         </div>
 
-        <div>
-            <a href="https://www.facebook.com"><img class="tamanho-logos" src="./img/facebook logo.png"></a>
+        <div class="formata-logos">
+            <h4>Ou Acesse Nossas Redes Sociais:</h4>
+            
+            <a href="https://www.facebook.com"><img class="tamanho-logo-face" src="./img/facebook logo.png"></a>
 
-            <a href="https://www.instagram.com"><img class="tamanho-logos" src="./img/logo insta.png"></a>
+            <a href="https://www.instagram.com"><img class="tamanho-logo-insta" src="./img/logo insta.png"></a>
 
-            <a href="https://www.twitter.com"><img class="tamanho-logos" src="./img/logo twitter.png"></a>
+            <a href="https://www.twitter.com"><img class="tamanho-logo-twitter" src="./img/logo twitter.png"></a>
 
-            <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
+            <a href="https://web.whatsapp.com"><img class="tamanho-logo-whats" src="./img/whats logo.png"></a>
 
         </div>
     </main>
