--- a/faleconosco.html
+++ b/faleconosco.html
@@ -63,6 +63,44 @@
     </main>
 
 </body>
+        
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+
+<footer>
+    <div class="footer-left">
+        <h3 class="text-left">Redes Sociais</h3>
+
+        <a href="https://www.facebook.com"><img class="tamanho-logos" src="./img/facebook logo.png"></a>
+
+        <a href="https://www.instagram.com"><img class="tamanho-logos" src="./img/logo insta.png"></a>
+
+        <a href="https://www.twitter.com"><img class="tamanho-logos" src="./img/logo twitter.png"></a>
+
+        <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
+
+
+
+    </div>
+    <div class="footer-right">
+        <h3 class="text-right">Formas de Pagamento</h3>
+
+        <img src="./img/logo pagamento.jpg" class="tamanho-img-pagamento" alt="Formas de Pagamento">
+
+
+
+
+
+    </div>
+
+
+
+
+
+</footer>
+
+<hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+<hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
 
 </html>
