--- a/padaria.html
+++ b/padaria.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style-categorias.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
-    <title>Padaria</title>
+    <title>Home</title>
+
 </head>
+
 <body>
-    
+    <header>
+        <div class="formata-imagem-header">
+            <img class="imagem-logo" src="./img/4food-cut-so-logo.png">
+            <img class="imagem-logo" src="./img/4food-nome.png">
+        </div>
+
+        <a class="formata-link-cor" href="./index.html">Categorias</a>
+        <a class="formata-link-cor" href="./faleconosco.html">Fale Conosco</a>
+        <a class="formata-link-cor" href="">Nosso Time</a>
+
+
+        <div class="label-input-botao">
+            <label for="nome">Nome</label>
+            <input type="text" name="nome" id="nome">
+            <label for="senha">Senha</label>
+            <input type="password" name="nome" id="senha">
+            <button class="botao-login" type="submit">Login</button>
+        </div>
+    </header>
+
 </body>
+<main class="cor-fundo">
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+
+    <div>
+        <img class="pao-frances" src="/Fotos categorias/Padaria/pao frances.jpg" alt="padaria">
+
+        <table>
+            <tr>
+                <td>Pão Frances</td>
+            </tr>
+            <tr>
+                <td>R$9,00kg </td>
+            </tr>
+        </table>
+
+        <img class="croassant" src="/Fotos categorias/Padaria/croassant.jpg" alt="padaria">
+
+        <table>
+            <tr>
+                <td>Croassant</td>
+            </tr>
+            <tr>
+                <td> R$4,00 </td>
+            </tr>
+        </table>
+
+    </div>
+
+
+</main>
+
+<body>
+
+
 </html>
