--- a/Bebidas.html
+++ b/Bebidas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" type="text/css" href="./style-categorias.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
     <title>Home</title>
-   
+
 </head>
+
 <body>
     <header>
         <div class="formata-imagem-header">
@@ -29,17 +31,54 @@
             <button class="botao-login" type="submit">Login</button>
         </div>
     </header>
- 
+
+
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+
+    <main class="cor-fundo">
+
+
+
+    </main>
+
+
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+
+    <footer>
+        <div class="footer-left">
+            <p class="text-left">Redes Sociais</p>
+
+            <a href="https://www.facebook.com"><img class="tamanho-logos" src="./img/facebook logo.png"></a>
+
+            <a href="https://www.instagram.com"><img class="tamanho-logos" src="./img/logo insta.png"></a>
+
+            <a href="https://www.twitter.com"><img class="tamanho-logos" src="./img/logo twitter.png"></a>
+
+            <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
+
+
+
+        </div>
+        <div class="footer-right">
+            <p class="text-right">Formas de Pagamento</p>
+
+            <img src="./img/logo pagamento.jpg" class="tamanho-img-pagamento" alt="Formas de Pagamento">
+
+
+
+        </div>
+
+
+
+
+
+    </footer>
+
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+
 </body>
-<hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
-<hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
-<main class="cor-fundo">
-
-
-    
-</main>
-    <body>
-   
-    
-        </html>
+</html>
