--- a/açougue.html
+++ b/açougue.html
@@ -30,7 +30,7 @@
         </div>
     </header>
  
-</body>
+
 <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
 <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
@@ -40,7 +40,45 @@
     
 </main>
 
-    <body>
+
+
+<hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+
+    <footer>
+        <div class="footer-left">
+            <p class="text-left">Redes Sociais</p>
+
+            <a href="https://www.facebook.com"><img class="tamanho-logos" src="./img/facebook logo.png"></a>
+
+            <a href="https://www.instagram.com"><img class="tamanho-logos" src="./img/logo insta.png"></a>
+
+            <a href="https://www.twitter.com"><img class="tamanho-logos" src="./img/logo twitter.png"></a>
+
+            <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
+
+
+
+        </div>
+        <div class="footer-right">
+            <p class="text-right">Formas de Pagamento</p>
+
+            <img src="./img/logo pagamento.jpg" class="tamanho-img-pagamento" alt="Formas de Pagamento">
+
+
+
+        </div>
+
+
+
+
+
+    </footer>
+
+            <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+            <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+
+</body>
    
     
         </html>
