--- a/categorias2.html
+++ b/categorias2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./style-index.css">
     <title>Categorias</title>
 </head>
+
 <body>
     <header>
         <div class="formata-imagem-header">
@@ -33,64 +35,94 @@
     <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
     <main class="cor-fundo">
-    
-        <img class="foto-categorias"
-        src="./Fotos categorias/Pratos prontos/lombo assado.jpg" 
-        alt="pratos-prontos">
-        
-     <table> 
-        <tr>
-            <td>Lombo Assado</td>
-             <td>R$20,00 </td>   
-        </tr>
-    </table>
 
-    <img class="foto-categorias"
-    src="./Fotos categorias/Pratos prontos/arroz-carrteiro.jpg"
-    alt="pratos-prontos">
-    <table> 
-       <tr>
-           <td>Arroz Carreteiro</td>
-            <td>R$18,00 </td>   
-       </tr>
-   </table>
-   <img class="foto-categorias"
-   src="./Fotos categorias/Pratos prontos/feijoada.jpg"
-   alt="pratos-prontos">
-   <table> 
-      <tr>
-          <td>Feijoada</td>
-           <td>R$24,00 </td>   
-      </tr>
-  </table>
-  <img class="foto-categorias"
-  src="./Fotos categorias/Pratos prontos/frango a parmegiana.jpg"
-  alt="pratos-prontos">
-  <table> 
-     <tr>
-         <td>Frango a Parmegiana</td>
-          <td>R$18,00 </td>   
-     </tr>
- </table>
- <img class="foto-categorias"
-    src="./Fotos categorias/Pratos prontos/picadinho de carne.jpg"
-    alt="pratos-prontos">
-    <table> 
-       <tr>
-           <td>Picadinho de Carne</td>
-            <td>R$22,00 </td>   
-       </tr>
-   </table>
-   <img class="foto-categorias"
-   src="./Fotos categorias/Pratos prontos/strogonoff de frango.jpg"
-   alt="pratos-prontos">
-   <table> 
-      <tr>
-          <td>Strogonoff de Frango</td>
-           <td>R$20,00 </td>   
-      </tr>
-  </table>
+        <img class="foto-categorias" src="./Fotos categorias/Pratos prontos/lombo assado.jpg" alt="pratos-prontos">
 
-    </main>   
+        <table>
+            <tr>
+                <td>Lombo Assado</td>
+                <td>R$20,00 </td>
+            </tr>
+        </table>
+
+        <img class="foto-categorias" src="./Fotos categorias/Pratos prontos/arroz-carrteiro.jpg" alt="pratos-prontos">
+        <table>
+            <tr>
+                <td>Arroz Carreteiro</td>
+                <td>R$18,00 </td>
+            </tr>
+        </table>
+        <img class="foto-categorias" src="./Fotos categorias/Pratos prontos/feijoada.jpg" alt="pratos-prontos">
+        <table>
+            <tr>
+                <td>Feijoada</td>
+                <td>R$24,00 </td>
+            </tr>
+        </table>
+        <img class="foto-categorias" src="./Fotos categorias/Pratos prontos/frango a parmegiana.jpg"
+            alt="pratos-prontos">
+        <table>
+            <tr>
+                <td>Frango a Parmegiana</td>
+                <td>R$18,00 </td>
+            </tr>
+        </table>
+        <img class="foto-categorias" src="./Fotos categorias/Pratos prontos/picadinho de carne.jpg"
+            alt="pratos-prontos">
+        <table>
+            <tr>
+                <td>Picadinho de Carne</td>
+                <td>R$22,00 </td>
+            </tr>
+        </table>
+        <img class="foto-categorias" src="./Fotos categorias/Pratos prontos/strogonoff de frango.jpg"
+            alt="pratos-prontos">
+        <table>
+            <tr>
+                <td>Strogonoff de Frango</td>
+                <td>R$20,00 </td>
+            </tr>
+        </table>
+
+    </main>
+
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+
+    <footer>
+        <div class="footer-left">
+            <p class="text-left">Redes Sociais</p>
+
+            <a href="https://www.facebook.com"><img class="tamanho-logos" src="./img/facebook logo.png"></a>
+
+            <a href="https://www.instagram.com"><img class="tamanho-logos" src="./img/logo insta.png"></a>
+
+            <a href="https://www.twitter.com"><img class="tamanho-logos" src="./img/logo twitter.png"></a>
+
+            <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
+
+
+
+        </div>
+        <div class="footer-right">
+            <p class="text-right">Formas de Pagamento</p>
+
+            <img src="./img/logo pagamento.jpg" class="tamanho-img-pagamento" alt="Formas de Pagamento">
+
+
+
+        </div>
+
+
+
+
+
+    </footer>
+
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+
+
 </body>
+
 </html>
