terminado estrutura das categorias

--- a/Hortifruti.html
+++ b/Hortifruti.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style-categorias.css">
+    <link rel="stylesheet" type="text/css" href="./style-hortifruti.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
     <title>Home</title>
 
@@ -37,7 +37,79 @@
     <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
     <main class="cor-fundo">
 
-    </main>
+   <main>
+        <img src="/Fotos categorias/Hortifruti/alface crespa.jpg" alt="Alface">
+        <table>
+            <tr>
+                <td>Alface Crespa</td>
+            </tr>
+            <tr>
+                <td>R$2,00 un</td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Hortifruti/cenouras.jpg" alt="Cenoura">
+        <table>
+            <tr>
+                <td>Cenoura</td>
+            </tr>
+            <tr>
+                <td>R$2,00 kg</td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Hortifruti/acelga.jpg" alt="acelga">
+        <table>
+            <tr>
+                <td>Acelga</td>
+            </tr>
+            <tr>
+                <td>R$2,90 un</td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Hortifruti/couve.jpg" alt="Colve">
+        <table>
+            <tr>
+                <td>Colve Manteiga</td>
+            </tr>
+            <tr>
+                <td>R$2,50 un</td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Hortifruti/tomate-cereja.jpg" alt="tomate-cereja">
+        <table>
+            <tr>
+                <td>tomate-cereja</td>
+            </tr>
+            <tr>
+                <td>R$4,00 caixa</td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Hortifruti/batata.jpg" alt="batata">
+        <table>
+            <tr>
+                <td>Batata</td>
+            </tr>
+            <tr>
+                <td>R$3,00 kg</td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Hortifruti/tomates.jpg" alt="tomates">
+        <table>
+            <tr>
+                <td>Tomate</td>
+            </tr>
+            <tr>
+                <td>R$3,00 kg</td>
+            </tr>
+        </table>
+
+   </main>
+
 
 </body>
 
