--- a/padaria.html
+++ b/padaria.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style-categorias.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
+    <link rel="stylesheet" type="text/css" href="style-padaria.css">
     <title>Home</title>
 
 </head>
@@ -38,7 +39,7 @@
     <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
     <div>
-        <img class="pao-frances" src="/Fotos categorias/Padaria/pao frances.jpg" alt="padaria">
+        <img src="/Fotos categorias/Padaria/pao frances.jpg" alt="padaria">
 
         <table>
             <tr>
@@ -49,7 +50,7 @@
             </tr>
         </table>
 
-        <img class="croassant" src="/Fotos categorias/Padaria/croassant.jpg" alt="padaria">
+        <img src="/Fotos categorias/Padaria/croassant.jpg" alt="padaria">
 
         <table>
             <tr>
@@ -60,12 +61,64 @@
             </tr>
         </table>
 
+        <img src="/Fotos categorias/Padaria/pao de leite.jpg" alt="padaria">
+
+        <table>
+            <tr>
+                <td>Pão de leite</td>
+            </tr>
+            <tr>
+                <td> R$0,40 un </td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Padaria/pão doce.jpg" alt="padaria">
+
+        <table>
+            <tr>
+                <td>Pão doce</td>
+            </tr>
+            <tr>
+                <td> R$0,90 </td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Padaria/sonho de creme.jpg" alt="padaria">
+
+        <table>
+            <tr>
+                <td>Sonho de creme</td>
+            </tr>
+            <tr>
+                <td> R$1,00 </td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Padaria/rosca salgada.jpg" alt="padaria">
+
+        <table>
+            <tr>
+                <td>Rosca Salgada</td>
+            </tr>
+            <tr>
+                <td> R$6,00 </td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Padaria/transa recheada.jpg" alt="padaria">
+
+        <table>
+            <tr>
+                <td>Transa Recheada</td>
+            </tr>
+            <tr>
+                <td> R$8,50</td>
+            </tr>
+        </table>
+
     </div>
 
 
 </main>
-
-<body>
-
 
 </html>
