adicionei o que Mari fez e vi conflitos

--- a/Bebidas.html
+++ b/Bebidas.html
@@ -38,6 +38,52 @@
 
     <main class="cor-fundo">
 
+        <img src="/Fotos categorias/Bebidas/refrigerantes diversos.jpg" alt="Bebidas">
+
+        <table>
+            <tr>
+                <td>Coca-Cola / Fanta / Guarana / Schweppes</td>
+            </tr>
+            <tr>
+                <td>R$4,00 Lata </td>
+            </tr>
+        </table>
+
+        <img src="/Fotos categorias/Bebidas/sucos diversos.jpg" alt="Bebidas">
+
+        <table>
+            <tr>
+                <td>Su-Fresh / Del-vale / Do-bem / Maguari</td>
+            </tr>
+            <tr>
+                <td>R$6,00 - 500ml </td>
+            </tr>
+
+        </table>
+
+        <img src="/Fotos categorias/Bebidas/cervejas diversas.jpg" alt="Bebidas">
+
+        <table>
+            <tr>
+                <td>Itaipava / Skol / Heineken / Budweizer / Brahma</td>
+            </tr>
+            <tr>
+                <td>R$5,00-Lata / R$8,00-Garrafa </td>
+            </tr>
+
+        </table>
+
+        <img src="/Fotos categorias/Bebidas/agua.jpg" alt="Bebidas">
+
+        <table>
+            <tr>
+                <td>Agua mineral</td>
+            </tr>
+            <tr>
+                <td>R$2,00 s/gás | R$2,70 c/gás </td>
+            </tr>
+
+        </table>
 
 
     </main>
