--- a/açougue.html
+++ b/açougue.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style-categorias.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
+    <link rel="stylesheet" type="text/css" href="style-açougue.css">
     <title>Home</title>
-   
+
 </head>
+
 <body>
     <header>
         <div class="formata-imagem-header">
@@ -29,20 +31,107 @@
             <button class="botao-login" type="submit">Login</button>
         </div>
     </header>
- 
-
-<hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
-<hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
-
-<main class="cor-fundo">
 
 
-    
-</main>
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+
+    <main class="cor-fundo">
+
+        <img class="foto-carne1" src="./Fotos categorias/Açougue/fraldinha.jpg" alt="açougue">
+
+        <table>
+            <tr>
+                <td>Fraldinha</td>
+            </tr>
+            <tr>
+                <td>R$20,00kg </td>
+            </tr>
+        </table>
+
+        <img class="foto-carne2" src="./Fotos categorias/Açougue/lombo suino.jpg" alt="açougue">
+
+        <table>
+            <tr>
+                <td>Lombo Suino</td>
+            </tr>
+            <tr>
+                <td>R$18,90kg </td>
+            </tr>
+        </table>
+
+        <img class="foto-carne" src="/Fotos categorias/Açougue/medalhão de filé mignon.jpg" alt="açougue">
+
+        <table>
+            <tr>
+                <td>Medalhão Filé Mignon</td>
+            </tr>
+            <tr>
+                <td>R$24,99kg </td>
+            </tr>
+        </table>
+
+        <img class="foto-carne" src="/Fotos categorias/Açougue/pernil.jpg" alt="açougue">
+
+        <table>
+            <tr>
+                <td>Pernil</td>
+            </tr>
+            <tr>
+                <td>R$23,90kg </td>
+            </tr>
+        </table>
+
+        <img class="foto-carne" src="/Fotos categorias/Açougue/picanha.jpg" alt="açougue">
+
+        <table>
+            <tr>
+                <td>Picanha</td>
+            </tr>
+            <tr>
+                <td>R$26,90kg </td>
+            </tr>
+        </table>
+
+        <img class="foto-carne" src="/Fotos categorias/Açougue/frango inteiro.jpg" alt="açougue">
+
+        <table>
+            <tr>
+                <td>Frango inteiro</td>
+            </tr>
+            <tr>
+                <td>R$16,98kg </td>
+            </tr>
+        </table>
+
+        <img class="foto-carne" src="/Fotos categorias/Açougue/peito de frango.jpg" alt="açougue">
+
+        <table>
+            <tr>
+                <td>Peito de frango</td>
+            </tr>
+            <tr>
+                <td>R$18,90kg </td>
+            </tr>
+        </table>
+
+        <img class="foto-carne" src="/Fotos categorias/Açougue/couxa de frango.jpg" alt="açougue">
+
+        <table>
+            <tr>
+                <td>Couxa de frango</td>
+            </tr>
+            <tr>
+                <td>R$16,00kg </td>
+            </tr>
+        </table>
+
+
+    </main>
 
 
 
-<hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
     <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
 
     <footer>
@@ -75,10 +164,10 @@
 
     </footer>
 
-            <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
-            <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
+    <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
+    <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
 </body>
-   
-    
-        </html>
+
+
+</html>
