adicionei as coisas da Mari na minha branch para arrumar conflitos do git, que não estavam deixando a gente dar merge

--- a/açougue.html
+++ b/açougue.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
-    <link rel="stylesheet" type="text/css" href="style-açougue.css">
+    <link rel="stylesheet" type="text/css" href="./style-açougue.css">
     <title>Home</title>
 
 </head>
@@ -60,7 +60,7 @@
             </tr>
         </table>
 
-        <img class="foto-carne" src="/Fotos categorias/Açougue/medalhão de filé mignon.jpg" alt="açougue">
+        <img class="foto-carne" src="./Fotos categorias/Açougue/medalhão de mile minhon.jpg" alt="açougue">
 
         <table>
             <tr>
@@ -71,7 +71,7 @@
             </tr>
         </table>
 
-        <img class="foto-carne" src="/Fotos categorias/Açougue/pernil.jpg" alt="açougue">
+        <img class="foto-carne" src="./Fotos categorias/Açougue/pernil.jpg" alt="açougue">
 
         <table>
             <tr>
@@ -82,7 +82,7 @@
             </tr>
         </table>
 
-        <img class="foto-carne" src="/Fotos categorias/Açougue/picanha.jpg" alt="açougue">
+        <img class="foto-carne" src="./Fotos categorias/Açougue/picanha.jpg" alt="açougue">
 
         <table>
             <tr>
@@ -93,7 +93,7 @@
             </tr>
         </table>
 
-        <img class="foto-carne" src="/Fotos categorias/Açougue/frango inteiro.jpg" alt="açougue">
+        <img class="foto-carne" src="./Fotos categorias/Açougue/frango inteiro.jpg" alt="açougue">
 
         <table>
             <tr>
@@ -104,7 +104,7 @@
             </tr>
         </table>
 
-        <img class="foto-carne" src="/Fotos categorias/Açougue/peito de frango.jpg" alt="açougue">
+        <img class="foto-carne" src="./Fotos categorias/Açougue/peito de frango.jpg" alt="açougue">
 
         <table>
             <tr>
@@ -115,7 +115,7 @@
             </tr>
         </table>
 
-        <img class="foto-carne" src="/Fotos categorias/Açougue/couxa de frango.jpg" alt="açougue">
+        <img class="foto-carne" src="./Fotos categorias/Açougue/couxa de frango.jpg" alt="açougue">
 
         <table>
             <tr>
@@ -146,21 +146,13 @@
 
             <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
 
-
-
         </div>
         <div class="footer-right">
             <p class="text-right">Formas de Pagamento</p>
 
             <img src="./img/logo pagamento.jpg" class="tamanho-img-pagamento" alt="Formas de Pagamento">
 
-
-
         </div>
-
-
-
-
 
     </footer>
 
