--- a/padaria.html
+++ b/padaria.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./padaria.html">
+    <link rel="stylesheet" type="text/css" href="./style-padaria.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
     <title>Home</title>
 
@@ -39,85 +39,82 @@
 
     <main class="cor-fundo">
 
-        <div>
-            <img src="/Fotos categorias/Padaria/pao frances.jpg" alt="padaria">
+        <img src="/Fotos categorias/Padaria/pao frances.jpg" alt="padaria">
 
-            <table>
-                <tr>
-                    <td>Pão Frances</td>
-                </tr>
-                <tr>
-                    <td>R$9,00kg </td>
-                </tr>
-            </table>
+        <table>
+            <tr>
+                <td>Pão Frances</td>
+            </tr>
+            <tr>
+                <td>R$9,00kg </td>
+            </tr>
+        </table>
 
-            <img src="/Fotos categorias/Padaria/croassant.jpg" alt="padaria">
+        <img src="/Fotos categorias/Padaria/croassant.jpg" alt="padaria">
 
-            <table>
-                <tr>
-                    <td>Croassant</td>
-                </tr>
-                <tr>
-                    <td> R$4,00 </td>
-                </tr>
-            </table>
+        <table>
+            <tr>
+                <td>Croassant</td>
+            </tr>
+            <tr>
+                <td> R$4,00 </td>
+            </tr>
+        </table>
 
-            <img src="/Fotos categorias/Padaria/pao de leite.jpg" alt="padaria">
+        <img src="/Fotos categorias/Padaria/pao de leite.jpg" alt="padaria">
 
-            <table>
-                <tr>
-                    <td>Pão de leite</td>
-                </tr>
-                <tr>
-                    <td> R$0,40 un </td>
-                </tr>
-            </table>
+        <table>
+            <tr>
+                <td>Pão de leite</td>
+            </tr>
+            <tr>
+                <td> R$0,40 un </td>
+            </tr>
+        </table>
 
-            <img src="/Fotos categorias/Padaria/pão doce.jpg" alt="padaria">
+        <img src="/Fotos categorias/Padaria/pão doce.jpg" alt="padaria">
 
-            <table>
-                <tr>
-                    <td>Pão doce</td>
-                </tr>
-                <tr>
-                    <td> R$0,90 </td>
-                </tr>
-            </table>
+        <table>
+            <tr>
+                <td>Pão doce</td>
+            </tr>
+            <tr>
+                <td> R$0,90 </td>
+            </tr>
+        </table>
 
-            <img src="/Fotos categorias/Padaria/sonho de creme.jpg" alt="padaria">
+        <img src="/Fotos categorias/Padaria/sonho de creme.jpg" alt="padaria">
 
-            <table>
-                <tr>
-                    <td>Sonho de creme</td>
-                </tr>
-                <tr>
-                    <td> R$1,00 </td>
-                </tr>
-            </table>
+        <table>
+            <tr>
+                <td>Sonho de creme</td>
+            </tr>
+            <tr>
+                <td> R$1,00 </td>
+            </tr>
+        </table>
 
-            <img src="/Fotos categorias/Padaria/rosca salgada.jpg" alt="padaria">
+        <img src="/Fotos categorias/Padaria/rosca salgada.jpg" alt="padaria">
 
-            <table>
-                <tr>
-                    <td>Rosca Salgada</td>
-                </tr>
-                <tr>
-                    <td> R$6,00 </td>
-                </tr>
-            </table>
+        <table>
+            <tr>
+                <td>Rosca Salgada</td>
+            </tr>
+            <tr>
+                <td> R$6,00 </td>
+            </tr>
+        </table>
 
-            <img src="/Fotos categorias/Padaria/transa recheada.jpg" alt="padaria">
+        <img src="/Fotos categorias/Padaria/transa recheada.jpg" alt="padaria">
 
-            <table>
-                <tr>
-                    <td>Trança Recheada</td>
-                </tr>
-                <tr>
-                    <td> R$8,50</td>
-                </tr>
-            </table>
-
-        </div>
+        <table>
+            <tr>
+                <td>Trança Recheada</td>
+            </tr>
+            <tr>
+                <td> R$8,50</td>
+            </tr>
+        </table>
 
     </main>
 
