--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style-categorias.css">
+    <link rel="stylesheet" type="text/css" href="./style-prato-pronto.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
     <title>Home</title>
 
@@ -36,32 +36,38 @@
         <hr style='width: 100%; height:1vh; text-align:center; border:0px; color:#f7a1a1; background:#f7a1a1;' />
         <hr style='width: 100%; height:4vh; text-align:center; border:0px; color:#420217; background:#420217;' />
 
+        <div class="container">
+            <h2>Pratos Prontos</h2>
+            <a href="./prato-pronto.html"><img class="foto-categorias"
+                    src="./Fotos categorias/Pratos prontos/foto comidas prontas.jpg" alt="pratos-prontos">
+            </a>
+        </div>
+        <div class="container">
+            <h2>Padaria</h2>
+            <a href="./padaria.html"><img class="foto-categorias" src="./Fotos categorias/Padaria/Foto padaria.jpg"
+                    alt="Padaria">
+            </a>
+        </div>
+        <div class="container">
+            <h2>Açougue</h2>
+            <a href="./açougue.html"><img class="foto-categorias" src="./Fotos categorias/Açougue/foto açougue.jpg"
+                    alt="açougue">
+            </a>
+        </div>
 
-        <h2>Pratos Prontos</h2>
-        <a href="./categorias2.html"><img class="foto-categorias"
-                src="./Fotos categorias/Pratos prontos/foto comidas prontas.jpg" alt="pratos-prontos">
-        </a>
-
-        <h2>Padaria</h2>
-        <a href="./padaria.html"><img class="foto-categorias" src="./Fotos categorias/Padaria/Foto padaria.jpg"
-                alt="Padaria">
-        </a>
-
-        <h2>Açougue</h2>
-        <a href="./açougue.html"><img class="foto-categorias" src="./Fotos categorias/Açougue/foto açougue.jpg"
-                alt="açougue">
-        </a>
-
+        <div class="container"></div>
         <h2>Bebidas</h2>
         <a href="./Bebidas.html"><img class="foto-categorias" src="./Fotos categorias/Bebidas/foto bebidas.jpg"
                 alt="Bebidas">
         </a>
+        </div>
 
-        <h2>Hortifruti</h2>
-        <a href="./Hortifruti.html"><img class="foto-categorias"
-                src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
-        </a>
-
+        <div class="container">
+            <h2>Hortifruti</h2>
+            <a href="./Hortifruti.html"><img class="foto-categorias"
+                    src="./Fotos categorias/Hortifruti/images hortaliças.jpg" alt="Hortifruti">
+            </a>
+        </div>
 
     </main>
 
@@ -80,21 +86,13 @@
 
             <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
 
-
-
         </div>
         <div class="footer-right">
             <p class="text-right">Formas de Pagamento</p>
 
             <img src="./img/logo pagamento.jpg" class="tamanho-img-pagamento" alt="Formas de Pagamento">
 
-
-
         </div>
-
-
-
-
 
     </footer>
 
