--- a/prato-pronto.html
+++ b/prato-pronto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./style-categorias.css">
+    <link rel="stylesheet" type="text/css" href="./style-prato-pronto.css">
     <link rel="stylesheet" type="text/css" href="./style-index.css">
     <title>Categorias</title>
 </head>
@@ -101,21 +101,13 @@
 
             <a href="https://web.whatsapp.com"><img class="tamanho-logos" src="./img/whats logo.png"></a>
 
-
-
         </div>
         <div class="footer-right">
             <p class="text-right">Formas de Pagamento</p>
 
             <img src="./img/logo pagamento.jpg" class="tamanho-img-pagamento" alt="Formas de Pagamento">
 
-
-
         </div>
-
-
-
-
 
     </footer>
 
